--- a/src/app/components/projects/networking/networking.component.html
+++ b/src/app/components/projects/networking/networking.component.html
@@ -3,8 +3,8 @@
           <div class="container">
             <div class="row">
               <div class="col-md-5">
-                <h2>Network</h2>
-                <h5>Scalability</h5>
+                <h1>Network</h1>
+                <h2>Scalability</h2>
                 <p>Digital Transformation for India's largest telecom network service provider involved redesigning 
                   the experience for customers, SMEs and business users. It involved breaking down complex manual process 
                   of quote, billing & invoicing that spanned across multiple platforms and CRM systems with high level of 
@@ -37,7 +37,7 @@
               </div>
               </div>
             </div>
-             <h1>Design Process</h1>
+             <h2>Design Process</h2>
            <div class="row design-process">
               <div class="col-sm-3">
                 <div class="step-image1">
@@ -166,18 +166,30 @@
             </div>
             <div class="col-md-6"></div>
               <div class="col-md-3">
+                <div class="row">
+                  <div class="col-md-1">
                 <div class="step-image2">
                   <img src="/assets/images/projects/networking/nm6.png" alt="Networking"/>
               </div>
-              <h1>23</h1>
+            </div>
+            <div class="col-md-10">
+              <h3>23</h3>
               <h6>User interviews</h6>
+            </div>
+            </div>
               </div>
               <div class="col-md-3">
+                <div class="row">
+                  <div class="col-md-1">
                 <div class="step-image2">
                   <img src="/assets/images/projects/networking/nm6.png" alt="Networking"/>
               </div>
-              <h1>03</h1>
+            </div>
+            <div class="col-md-10">
+              <h3>03</h3>
               <h6>User groups</h6>
+            </div>
+            </div>
               </div>
               <div class="col-md-6">
               <div class="row list">
