content & font changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -139,10 +139,12 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-md-12">
     <ul class="footer-social-links">
       <li><a href="https://www.linkedin.com/company/uxmint-design" target="_blank"><img src="/assets/images/footer/icon-1.svg"></a></li>
       <li><a href="https://medium.com/uxmint" target="_blank"><img src="/assets/images/footer/icon-2.svg"></a></li>
     </ul>
+  </div>
   </div>
     <div class="row">
         <div class="col-md-12">
