--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -55,23 +55,23 @@
     </div>
     <div class="row tab">
           <div class="col-md-1"></div>
-          <div class="col-md-2" routerLink="/services/user-experience">
+          <div class="col-md-2 tab-link" routerLink="/services/user-experience">
             <img src="/assets/images/sample/ue.svg" />
             <p>USER EXPERIENCE</p>
           </div>
-          <div class="col-md-2" routerLink="/services/interface-design">
+          <div class="col-md-2 tab-link" routerLink="/services/interface-design">
             <img src="/assets/images/sample/id.svg" />
             <p>INTERFACE DESIGN</p>
           </div>
-          <div class="col-md-2" routerLink="/services/ui-dev">
+          <div class="col-md-2 tab-link" routerLink="/services/ui-dev">
             <img src="/assets/images/sample/ui.svg" />
             <p>UI DEVELOPMENT</p>
           </div>
-          <div class="col-md-3" routerLink="/services/end-to-end">
+          <div class="col-md-3 tab-link" routerLink="/services/end-to-end">
             <img src="/assets/images/sample/ee.svg" />
             <p>END TO END DEVELOPMENT</p>
           </div>
-          <div class="col-md-2" routerLink="/services/usability-testing">
+          <div class="col-md-2 tab-link" routerLink="/services/usability-testing">
             <img src="/assets/images/sample/ut.svg" />
             <p>USABILITY TESTING</p>
           </div>
