--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -16,6 +16,8 @@
     .tab{
         padding-top: 120px;
         text-align: center;
+        .tab-link{
+            padding-top: 10px;
         p{
             font-size: 13px;
             font-weight: 500;
@@ -23,6 +25,11 @@
             padding-top: 10px;
             color: #A8A8A8;
         }
+        &:hover{
+                box-shadow: 10px 26px 52px rgba(92, 94, 93, 0.34);
+                //padding-top: 10px;
+            }
+    }
     }
 }
 
