content & font changes

--- a/src/app/components/our-team/our-team.component.scss
+++ b/src/app/components/our-team/our-team.component.scss
@@ -7,6 +7,8 @@ text-align: left;
 color: #6C6C6C;
 font-style: 'Roboto';
 .step-image img{
+    width: 100%;
+    height: auto;
     filter: #606A74; 
   -webkit-filter: grayscale(1);
 
