--- a/src/app/components/projects/app-development/app-development.component.scss
+++ b/src/app/components/projects/app-development/app-development.component.scss
@@ -280,8 +280,9 @@
 .web-image{
     background-color: #DF3F6F;
     .image{
+        text-align: center;
         img{
-              width: 100%;
+              width: 80%;
               height: auto;
 }
 }
