--- a/src/app/components/projects/health-care/health-care.component.scss
+++ b/src/app/components/projects/health-care/health-care.component.scss
@@ -199,8 +199,9 @@
     padding-top: 30px;
     padding-bottom: 30px;
     .web{
+        text-align: center;
         img{
-              width: 100%;
+              width: 80%;
               height: auto;
            }
        }
