--- a/src/app/components/projects/health/health.component.html
+++ b/src/app/components/projects/health/health.component.html
@@ -201,8 +201,11 @@
          <div class="col-md-3">
            <h1>Other Screens</h1>
          </div>
-         <div class="col-md-9">
+         <div class="col-md-1"></div>
+         <div class="col-md-8">
+           <div class="step-image">
          <img src="/assets/images/projects/health/other-screen.png" />
+        </div>
         </div>
        </div>
      </div>
