--- a/src/app/components/projects/marketing/marketing.component.html
+++ b/src/app/components/projects/marketing/marketing.component.html
@@ -169,7 +169,9 @@
     <div class="container">
         <div class="heading">
         <h1>Web View</h1>
+        <div class="step-image">
         <img src="/assets/images/projects/marketing/web-view.png">
+    </div>
     </div>
     <div class="row">
         <div class="col-md-3">
@@ -206,7 +208,9 @@
         </div>
         </div>
         <div class="row">
+            <div class="step-image">
             <img src="/assets/images/projects/marketing//responsive.png" />
+        </div>
         </div>
     </div>
 </section>
