--- a/src/app/components/projects/skill-development/skill-development.component.html
+++ b/src/app/components/projects/skill-development/skill-development.component.html
@@ -295,7 +295,9 @@
       <div class="container">
           <div class="heading">
           <h1>Web View</h1>
+          <div class="step-image">
           <img src="/assets/images/projects/skill-development/web-view.png">
+        </div>
       </div>
       <div class="row">
           <div class="col-md-3">
