--- a/src/app/components/projects/social-review/social-review.component.html
+++ b/src/app/components/projects/social-review/social-review.component.html
@@ -200,7 +200,9 @@
   <div class="container">
       <div class="heading">
       <h1>Web View</h1>
+      <div class="step-image">
       <img src="/assets/images/projects/social-review/social.png">
+    </div>
   </div>
   <div class="row">
       <div class="col-md-3">
