--- a/src/app/components/projects/web-development/web-development.component.html
+++ b/src/app/components/projects/web-development/web-development.component.html
@@ -134,7 +134,9 @@
   <div class="container">
       <div class="heading">
       <h1>Web View</h1>
+      <div class="step-image">
       <img src="/assets/images/projects/web-development/web-dev.png">
+    </div>
   </div>
   <div class="row">
       <div class="col-md-3">
