--- a/src/app/components/services/front-end-development/development.component.scss
+++ b/src/app/components/services/front-end-development/development.component.scss
@@ -48,8 +48,9 @@ p{
     background-color: rgb(255, 255, 255); 
     margin-top: 75px;
     .step-image1{
+        margin-top: 20px;
         img{
-        width: 140%;
+        width: 120%;
         height: auto;
         }
     }
