--- a/src/app/components/projects/construction-portal/construction-portal.component.scss
+++ b/src/app/components/projects/construction-portal/construction-portal.component.scss
@@ -199,16 +199,16 @@
 }
 
 /* Web image */
-.web-image{
-    padding-top: 30px;
-    padding-bottom: 30px;
-    .web{
-        img{
-              width: 100%;
-              height: auto;
-           }
-       }
-}
+// .web-image{
+//     padding-top: 30px;
+//     padding-bottom: 30px;
+//     .web{
+//         img{
+//               width: 100%;
+//               height: auto;
+//            }
+//        }
+// }
 
 /* Solution */
 .solution{
@@ -259,10 +259,13 @@
         padding-bottom: 30px;
         color: #ffffff;
     }
+    .step-image{
+        text-align: center;
     img{
-        width: 100%;
+        width: 80%;
         padding-bottom: 100px;
     }
+}
 }
 }
   @include media-breakpoint-down(md) {
