--- a/src/app/components/projects/event-management/event-management.component.scss
+++ b/src/app/components/projects/event-management/event-management.component.scss
@@ -34,8 +34,8 @@ p{
 }
 .step-image img {
     height: auto;
-    width: 150%;
-    padding-top: 20px;
+    width: 120%;
+    padding-top: 40px;
     margin-top: -35px;
     margin-left: -35px;
 }
@@ -55,9 +55,9 @@ p{
         line-height: 25px;
     }
     .step-image img{
-        width: 100%;
+        width: 80%;
         height: auto;
-        margin-top: 35px;
+        margin-top: 20px;
         margin-left: 1px;
     }
 }
@@ -626,9 +626,13 @@ p{
     .step-image img {
         width: 100%;
     }
-    .step-image1 img {
-        width: 100%;
+    .step-image1{
+        text-align: center;
+        img{
+        //text-align: center;
+        width: 80%;
         padding-bottom: 80px;
+        }
     }
     .col-md-3{
         margin-bottom: 55px;
