--- a/src/app/components/projects/health/health.component.scss
+++ b/src/app/components/projects/health/health.component.scss
@@ -22,7 +22,7 @@
         text-align: justify;
     }
     img{
-        width: 130%;
+        width: 120%;
         height: auto;
     }
 }
@@ -421,6 +421,15 @@
 }
 }
 
+.veg-image{
+    .step-image{
+        text-align: center;
+        img{
+            width: 100%;
+            height: auto;
+        }
+    }
+}
 /* Other screen */
 .other-screen{
     background-color: #313131;
@@ -432,10 +441,13 @@
         padding-bottom: 20px;
         color: #15A450;
     }
+    .step-image{
+        text-align: center;
     img{
-        width: 100%;
+        width: 80%;
         height: auto;
     }
+}
 }
 
 @include media-breakpoint-down(md) {
@@ -453,8 +465,9 @@
     padding-bottom: 10px;
     background-color: #46AE62;
     .mobile{
+        text-align: center;
         img{
-              width: 100%;
+              width: 80%;
               height: auto;
            }
        }
@@ -467,7 +480,7 @@
         background-color: #46AE62;
         .mobile{
             img{
-                  width: 100%;
+                  width: 80%;
                   height: auto;
                }
            }
