--- a/src/app/components/projects/marketing/marketing.component.scss
+++ b/src/app/components/projects/marketing/marketing.component.scss
@@ -29,7 +29,7 @@
     .image{
     img{
         padding-top: 40px;
-        width: 123%;
+        width: 110%;
         height: auto;
     }
 }
@@ -55,9 +55,10 @@
             }
         }
         .image{
+            text-align: center;
         img{
             padding-top: 40px;
-            width: 100%;
+            width: 80%;
             height: auto;
         }
     }
@@ -223,7 +224,15 @@
     }
 }
 }
-
+.uxhead-image{
+.step-image{
+    text-align: center;
+img{
+    width: 100%;
+    height: auto;
+}
+}
+}
 
 /* Illustrations */
 .illustration{
@@ -271,10 +280,13 @@ img{
         padding-bottom: 30px;
         color: #ffffff;
     }
+    .step-image{
+        text-align: center;
     img{
-        width: 100%;
+        width: 80%;
         padding-bottom: 100px;
     }
+}
 }
 }
 
@@ -286,10 +298,13 @@ img{
     h1{
         font-size: 25px;
       }
+      .step-image{
+        text-align: center;
     img{
-        width: 100%;
+        width: 80%;
         padding-bottom: 80px;
-      }
+    }
+}
     }
 .col-md-3{
     width: 50%;
@@ -311,9 +326,12 @@ img{
         padding-bottom: 30px;
         color: #ffffff;
     }
+    .step-image{
+        text-align: center;
     img{
-        width: 100%;
+        width: 80%;
     }
+}
 }
 
 @include media-breakpoint-down(md) {
