--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -31,6 +31,8 @@ p{
     border-radius: 6px;
 }
 .step-image img{
+    width: 100%;
+    height: auto;
     filter: #606A74; 
     -webkit-filter: grayscale(1);
 }
