--- a/src/app/components/projects/skill-development/skill-development.component.scss
+++ b/src/app/components/projects/skill-development/skill-development.component.scss
@@ -27,8 +27,9 @@
         }
     }
     .image-skill{
+        margin-top: 50px;
     img{
-        width: 126%;
+        width: 100%;
         height: auto;
     }
 }
@@ -385,7 +386,7 @@
         font-size: 24px;
         font-weight: 300;
         font-family: 'Inter', sans-serif;
-        padding-bottom: 20px;
+        padding-bottom: 0px;
     }
     p{
         font-family: 'Roboto', sans-serif;
@@ -521,8 +522,9 @@
         //color: #ffffff;
     }
     .app-image{
+        text-align: center;
         img{
-            width: 100%;
+            width: 80%;
         }
     }
 }
@@ -538,7 +540,7 @@
         }
         .app-image{
             img{
-                width: 100%;
+                width: 80%;
             }
         }
     }
@@ -564,10 +566,13 @@
         padding-bottom: 40px;
         //color: #ffffff;
     }
+    .step-image{
+        text-align: center;
     img{
-        width: 100%;
+        width: 80%;
         padding-bottom: 100px;
     }
+}
 } 
 }
 
@@ -580,10 +585,13 @@
             font-size: 25px;
             padding-bottom: 30px;
         }
+        .step-image{
+            text-align: center;
         img{
-            width: 100%;
+            width: 80%;
             padding-bottom: 80px;
         }
+    }
     }
     .col-md-3{
         width: 50%;
