--- a/src/app/components/services/usability-testing/usability-testing.component.scss
+++ b/src/app/components/services/usability-testing/usability-testing.component.scss
@@ -86,7 +86,7 @@ p{
         margin-top: 200px;
     }
     .step-image img{
-        width: auto;
+        width: 100%;
         height: auto;
     }
 }
